--- a/CozmatikDukkan/Areas/ManagerPanel/Views/Shared/_LayoutPage1.cshtml
+++ b/CozmatikDukkan/Areas/ManagerPanel/Views/Shared/_LayoutPage1.cshtml
@@ -15,7 +15,7 @@
         </button>
         <div class="navbar-nav">
             <div class="nav-item text-nowrap">
-                <a class="nav-link px-3" href="#">Sign out</a>
+                <a class="nav-link px-3" href="@Url.Action("LogOut","Login")">Çıkış Yap</a>
             </div>
         </div>
     </header>
